--- a/Distribution/CarbonCD.ini
+++ b/Distribution/CarbonCD.ini
@@ -6,12 +6,12 @@ Language=English.cml
 Skin=
 WavOnSuccess=
 WavOnFail=
-LastAccessFile=C:\Users\Venom\Desktop\iso.cue
+LastAccessFile=
 LogWindow=0
-TOCWindow=1
+TOCWindow=0
 SubQSpeed=255
-MainDlgX=270
-MainDlgy=128
+MainDlgX=2444
+MainDlgy=738
 TocWndX=100
 TocWndY=350
 TocWndCX=600
@@ -35,7 +35,7 @@ SubQMethod=0
 AnalyzeSubQ=0
 BurstErrorScan=0
 AnalyzePregap=0
-ExtendedSettings=1
+ExtendedSettings=0
 Engine=0
 [WriteSetting]
 BurnProof=1
